--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,12 @@
 {
+  "editor.formatOnSave": true,
   "css.validate": false,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.formatOnSave": true,
   "editor.suggestSelection": "first",
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true,
-    "source.fixAll.stylelint": true
+    "source.fixAll.eslint": true
   },
   "eslint.format.enable": true,
   "less.validate": false,
-  "scss.validate": false,
-  "stylelint.enable": true,
-  "stylelint.packageManager": "yarn",
-  "stylelint.validate": [
-    "css",
-    "postcss",
-    "scss",
-    "typescript",
-    "typescriptreact"
-  ]
+  "scss.validate": false
 }
