--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
@@ -26,7 +27,8 @@
     "react-video-js-player": "^1.1.1",
     "styled-components": "^5.3.6",
     "styled-icons": "^10.47.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
