--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
+    "react-player": "^2.11.2",
     "react-scroll": "^1.8.9",
     "react-video-js-player": "^1.1.1",
     "styled-components": "^5.3.6",
