--- a/package.json
+++ b/package.json
@@ -16,19 +16,22 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
-    "@types/node": "18.13.0",
-    "@types/react": "18.0.27",
+    "@styled-icons/entypo-social": "^10.46.0",
+    "@styled-icons/fa-solid": "^10.47.0",
+    "@styled-icons/material": "^10.47.0",
+    "@types/node": "18.16.3",
+    "@types/react": "18.2.0",
     "@types/react-dom": "18.0.10",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.1",
+    "react-hook-form": "^7.43.9",
     "react-player": "^2.11.2",
     "react-scroll": "^1.8.9",
     "styled-components": "^5.3.6",
     "styled-icons": "^10.47.0",
     "typescript": "4.9.5",
-    "yup": "^1.0.2"
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
