--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.0.10",
+    "date-fns": "^2.30.0",
+    "html-react-parser": "^4.0.0",
+    "isomorphic-dompurify": "^1.6.0",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
